# kxagent

./: .gitignore  pyproject.toml
apps/: chat_sequential.py
kxagent/: core.py
kxagent/audio/tts/models/: models_jp_extra.py  net.py
kxagent/audio/tts/nlp/chinese/: bert_feature.py  g2p.py
kxagent/audio/tts/nlp/english/: g2p.py  normalizer.py
kxagent/audio/tts/nlp/japanese/: g2p.py  g2p_utils.py  normalizer.py
kxagent/audio/tts/nlp/japanese/pyopenjtalk_worker/: __init__.py  __main__.py
kxagent/audio/tts/nlp/japanese/user_dict/: part_of_speech_data.py
kxagent/audio/tts/utils/: subprocess.py
kxagent/brain/: README.md  core.py
kxagent/language/quantization/: generate_vocab.py
kxagent/vision/: core.py
kxagent/voice/tts/: core.py  logging.py
kxagent/voice/tts/models/: attentions.py  infer.py  models_jp_extra.py  net.py
kxagent/voice/tts/models/utils/: __init__.py  safetensors.py
kxagent/voice/tts/nlp/: __init__.py
kxagent/voice/tts/nlp/chinese/: normalizer.py
kxagent/voice/tts/nlp/english/: bert_feature.py
kxagent/voice/tts/nlp/japanese/pyopenjtalk_worker/: worker_client.py
kxagent/voice/tts/nlp/japanese/user_dict/: __init__.py
playground/: chat.ipynb  llama_cpp.ipynb  tts.ipynb
scripts/: chat_sequential.py
scripts/misc/: to_gguf.py
src/kxagent/: __init__.py  core.py
src/kxagent/audio/: __init__.py
src/kxagent/audio/tts/: __init__.py  constants.py  core.py
src/kxagent/audio/tts/models/: inference.py  modules.py
src/kxagent/audio/tts/models/nets/: attentions.py  core.py  models_jp_extra.py  modules.py  net.py
src/kxagent/audio/tts/models/utils/: checkpoints.py
src/kxagent/audio/tts/nlp/: bert_models.py
src/kxagent/audio/tts/nlp/chinese/: normalizer.py
src/kxagent/audio/tts/nlp/japanese/: bert_feature.py  g2p.py  normalizer.py
src/kxagent/audio/tts/nlp/japanese/pyopenjtalk_worker/: worker_server.py
src/kxagent/audio/tts/utils/: subprocess.py
