[project]
name = "kxagent"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "gradio>=4.36.1",
    "numpy>=2.0.0",
    "torch>=2.3.1",
    "torchaudio>=2.3.1",
    "whisper>=1.1.10",
    "transformers>=4.41.2",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kxagent"]
